--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -57,7 +57,7 @@ right:-260px">
 <%=image_tag("http://img.teamkn.com/i/mwYJCxQh.jpg", size: "70x70", alt: "Edit Entry")%>
 
 
-  <%= f.radio_button 'logo', 'http://img.teamkn.com/i/ResDC3VA.jpg'%>
+  <%= f.radio_button 'logo', 'http://img.teamkn.com/i/mwYJCxQh.jpg'%>
   <%= f.label :头像c %>
 
 </span></br>
