--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -9,6 +9,12 @@
 
 
 
+#menu4 {background-color:#FFBB66;height:800px;width:1200px;float:left; }
+#menu5 {background-color:yellow;height:200px;width:1200px;float:left; padding: 5px 5px }
+#menu6 {background-color:#FFBB66;height:200px;width:1200px;float:left;padding: 5px 5px }
+#menu7 {background-color:#FFBB66;height:200px;width:300px;float:left;}
+#menu8 {background-color:yellow;height:600px;width:300px;float:left;
+  padding: 5px 5px 0}
 
 
 @mixin box_sizing {
