--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -42,7 +42,7 @@ background-position: 50% 70%;text-align:center;">
 right:-260px">
 
 <h3 style="color:blue">头像选择</h3>
-<span>
+<span>&nbsp;
   <%=image_tag("http://img.teamkn.com/i/ResDC3VA.jpg", size: "70x70", alt: "Edit Entry")%>
   <%= f.radio_button 'logo', 'http://img.teamkn.com/i/ResDC3VA.jpg'%>
   
