--- a/app/views/needs/index.html.erb
+++ b/app/views/needs/index.html.erb
@@ -46,30 +46,51 @@
     
     <% @needs.each do |need| %>
       <tr>
-        <div class='bt1'>
+        <td><div class='bt1'>
         <%= link_to '显示', need %>
-        </div>
+        </div></td>
+       
         <% @user_image=User.find(need.user_id).logo%>
         <% @name=User.find(need.user_id).name%>
-        <%=image_tag(@user_image, size: "80x80", )%> &nbsp;&nbsp;&nbsp;
-        <%=@name%>&nbsp;&nbsp;&nbsp;
-        <%= need.title %>
 
-        <p style='color:red;display:inline'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;发布时间：</p>
+
+
+        <td><%=image_tag(@user_image, size: "80x80", )%> &nbsp;&nbsp;&nbsp;</td>
+        
+
+        <td><p style='color:red;display:inline'>昵称：</p>
+        <%=@name%>&nbsp;&nbsp;&nbsp;</td>
+
+
+
+        <td><p style='color:red;display:inline'>标题：</p>
+        <%= need.title %></td>
+
+
+
+        <td><p style='color:red;display:inline'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;发布时间：</p>
         <% @time=need.created_at.to_s[0,20]%>
         <%=@time%>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <p style='color:red;display:inline'>标签:</p>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+
+
+
+        <td><p style='color:red;display:inline'>标签:</p>
         <%@tags= JSON.parse(need.tags)%>
         <%@tags.each do |tag|%>
         <%=tag%>&nbsp;
-        <%end%>
+        <%end%></td>
+
+
+
 
     
         <% if need.user_id.to_i==@i.to_i %>
-          <strong>我的需求</strong>&nbsp;&nbsp;
-          <%= link_to '删除', need, method: :delete, data: { confirm: 'Are you sure?' } %>
-        <%end%>  
+          <td><strong>我的需求</strong>&nbsp;&nbsp;
+          <%= link_to '删除', need, method: :delete, data: { confirm: '要删除这条需求吗' } %>
+
+
+        <%end%>  </td>
       </br>
       </tr>
     <% end %>
