--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,6 +3,9 @@
 
 /* mixins, variables, etc. */
 
+
+.new-thing{display:inline; width:100px;height:50px;}
+
 #menu {background-color:#FFBB66;height:800px;width:200px;float:left;}
 #menu2 {background-color:#FFFF77;height:800px;width:550px;float:left;}
 #menu3 {background-color:#FFBB66;height:800px;width:300px;float:left;}
