--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -71,19 +71,20 @@ a {
 
 
 
-
 // .logo{
 //   float: left;
 // }
 .des{
-  float: left;
+  float: right;
   background-color:green;
   padding: 5px 5px 5px 5px;
   margin-left: 10px;
   height: 200px;
   width:800px;
+  // display: inline;
 }
 .clear{
   clear: both;
 }
 .line{background-image:url(http://pic2.ooopic.com/12/00/40/50bOOOPIC42.jpg);}
+.xxx{display: inline; float: left;}
