--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "豆瓣辅助购书网首页 ", root_path, id: "logo" %>
+    <%= link_to "ruby on rails 敏捷销售平台 ", root_path, id: "logo" %>
     
   </div>
     <nav>
